--- a/index.css
+++ b/index.css
@@ -39,7 +39,7 @@ nav ul li a{
     border-radius:4px ;
 }
 .section-1{
-    background: url('img/slider.jpg');
+    background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9PnuxwD_PXF3U_mP7uBNVMa19sVTXhpQ2CmAwOiAe69iloooPoU-NN10&s=10');
     height:auto;
     width:100%;
     background-color: #000000;
